// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate a connection 1`] = `
Object {
  "connection": "// @flow
import { connectionDefinitions } from '../../graphql/connection/CustomConnectionType';

import ExampleType from './ExampleType';

export default connectionDefinitions({
  name: 'Example',
  nodeType: ExampleType,
});
",
}
`;

exports[`generate a connection with schema 1`] = `
Object {
  "connection": "// @flow
import { connectionDefinitions } from '../../graphql/connection/CustomConnectionType';

import PostType from './PostType';

export default connectionDefinitions({
  name: 'Post',
  nodeType: PostType,
});
",
}
`;
